# ML_course

./: ZegreanAndrei_ml_dbscan.ipynb  ZegreanAndrei_ml_iris_classif.ipynb  ZegreanAndrei_titanic_classif.ipynb  pyproject.toml
Homework/: ZegreanAndrei_ml_iris_classif.ipynb  ZegreanAndrei_titanic_classif.ipynb
Project/: AI_assessment_2024_2025.html  EDA.ipynb  best_model.ipynb  model_exploration.ipynb  submission.csv
toma_project/: EDA.ipynb  classif.ipynb  job_change_test.csv  job_change_train.csv
