[tool.poetry]
name = "ml-toma"
version = "0.1.0"
description = ""
authors = ["Zegrean Andrei <'andrei@zegrean.ro'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
kagglehub = "^0.3.6"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
